# ark-operator

./: .dockerignore  .gitignore  Dockerfile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.bin/: build-container  build-containers  lint-code  test-code  update-requirements
.devcontainer/: devcontainer.json
.docker/: bashrc  server-entry.sh
.github/workflows/: ci.yml  release.yml
crd_chart/: Chart.yaml
crd_chart/crds/: ArkCluster.yml  crds.yml
examples/: cluster-full.yml  cluster-simple.yml  operator-mod-updates.yml  operator.yml
src/ark_operator/: __init__.py  __main__.py  ark_utils.py  command.py  decorators.py  exceptions.py  handlers.py  k8s.py  k8s_utils.py  log.py  rcon.py  steam.py  utils.py
src/ark_operator/ark/: __init__.py  cluster.py  conf.py  curseforge.py  jobs.py  pvc.py  runner.py  server.py  service.py  updates.py  utils.py
src/ark_operator/cli/: __init__.py  cluster.py  context.py  converters.py  core.py  options.py  server.py
src/ark_operator/data/: __init__.py  models.py  types.py
src/ark_operator/handlers/: __init__.py  conf.py  create.py  delete.py  misc.py  update.py  utils.py
src/ark_operator/k8s/: __init__.py  client.py  crds.py  pvc.py
src/ark_operator/resources/: crds.yml
src/ark_operator/templates/: __init__.py  check-update-cronjob.yml.j2  init-job.yml.j2  pvc.yml.j2  secret.yml.j2  server-pod.yml.j2  service-game.yml.j2  service-rcon.yml.j2  update-job.yml.j2
test/ark/steamapps/: appmanifest_2430930.acf
test/manifests/: cluster.yml  rbac.yml.j2
test/server/: docker-compose.yml
test/tests/: conftest.py  test_ark_utils.py  test_command.py  test_decorators.py  test_handlers.py  test_k8s_utils.py  test_log.py  test_placeholder.py  test_rcon.py  test_steam.py  test_utils.py
test/tests/ark/: test_cluster.py  test_conf.py  test_pvc.py  test_runner.py  test_server.py  test_service.py  test_utils.py
test/tests/data/: test_models.py
test/tests/k8s/: test_crds.py  test_pvc.py  test_utils.py
